# faultline

./: LICENSE  README.md  pyproject.toml  requirements.txt
scimap/: __init__.py  config.py  main.py
scimap/pipeline/: __init__.py  digest.py  ingestion.py  llm.py  phase1_orient.py  phase2_interrogate.py  phase3_synthesize.py  phase4_distill.py  report.py
scimap/utils/: arxiv_fetcher.py  chunker.py  pdf_reader.py  semantic_scholar.py
tests/: conftest.py
tests/integration/: test_cli.py  test_ingestion.py  test_phases.py
tests/unit/: test_arxiv_fetcher.py  test_chunker.py  test_llm.py  test_main.py  test_pdf_reader.py  test_report.py  test_semantic_scholar.py
